--- a/eea/alchemy/browser/css/tool.css
+++ b/eea/alchemy/browser/css/tool.css
@@ -36,29 +36,6 @@
   text-align: right;
 }
 
-#eea-alchemy .alchemy-results {
-  width: 95%;
-}
-
-#eea-alchemy .alchemy-box-results {
-  float: left;
-  width: 24.7%;
-  height: 20em;
-  margin: 0px;
-  padding: 0px;
-  border-color: #cccccc;
-  border-width: 1px;
-  border-style: dotted;
-}
-
-#eea-alchemy .alchemy-loader {
-  width: 100%;
-  height: 1em;
-  border: 1px dotted #95b229;
-}
-
-#eea-alchemy .alchemy-loader-bar {
-  width: 1em;
-  height: 100%;
-  background-color: #95b229;
+#eea-alchemy .alchemy-msg {
+  color: #95b229;
 }
