Refs #9486 - Auto tagging
- Add specific CSS class for auto-tagged links;
- Add possibilty to blacklist elements;
- Update documentation.

--- a/eea/alchemy/browser/css/view.css
+++ b/eea/alchemy/browser/css/view.css
@@ -1,4 +1,8 @@
-
 .eea-alchemy-tag {
+}
 
+#content .eea-alchemy-tag a, #content .eea-alchemy-tag a:visited,
+.eea-alchemy-tag a, .eea-alchemy-tag a:visited {
+    border-bottom-style: dashed;
+    border-bottom-width: 2px;
 }
