--- a/eea/alchemy/browser/css/tool.css
+++ b/eea/alchemy/browser/css/tool.css
@@ -4,18 +4,27 @@
 
 #eea-alchemy .alchemy-box {
   float: left;
-  width: 33%;
-  height: 40em;
-  margin: 0px;
-  padding: 0px;
+  width: 27%;
+  height: 21em;
+  margin: 5px;
   border-color: #cccccc;
   border-width: 1px;
   border-style: dotted;
+  display: none;
+  box-shadow: 3px 3px 3px #CCC;
+  border-radius: 10px;
+  padding: 0 1em;
 }
 
 #eea-alchemy legend {
-  margin-left: 1.5em;
-  padding: 0.2em;
+  text-align: center;
+  background: white;
+  padding: 1em 4em;
+  border-radius: 20px;
+  font-size: 110%;
+  font-weight: bold;
+  color: #999;
+  border: 1px solid #eee;
 }
 
 #eea-alchemy ul {
@@ -25,7 +34,7 @@
 
 #eea-alchemy .alchemy-box-content {
   width: 100%;
-  height: 95%;
+  height: 75%;
   overflow-y: auto;
   overflow-x: hiddden;
 }
@@ -34,6 +43,7 @@
   width: 99%;
   padding: 0.5em;
   text-align: right;
+  display: none;
 }
 
 #eea-alchemy .alchemy-msg {
