--- a/eea/alchemy/browser/css/tool.css
+++ b/eea/alchemy/browser/css/tool.css
@@ -11,6 +11,7 @@
   display: none;
   box-shadow: 3px 3px 3px #CCC;
   border-radius: 10px;
+  padding: 1em;
 }
 
 #eea-alchemy legend {
@@ -31,10 +32,9 @@
 
 #eea-alchemy .alchemy-box-content {
   width: 100%;
-  height: 75%;
+  height: 80%;
   overflow-y: auto;
   overflow-x: hiddden;
-  margin-top: 1em;
 }
 
 #eea-alchemy .alchemy-button {
