Refs #14797 - WIP - Pair field, link and add the firstOnly option
- Add "mark only first occurrence" option selected by default;
- Update JS logic.
- Add GenericSetup upgrade step.

--- a/eea/alchemy/browser/css/view.css
+++ b/eea/alchemy/browser/css/view.css
@@ -6,3 +6,16 @@
     border-bottom-style: dashed;
     border-bottom-width: 1px;
 }
+
+.template-alchemy-controlpanel .textType,
+.template-alchemy-controlpanel .field input[type="text"][size] {
+  width: 40%;
+}
+
+.template-alchemy-controlpanel table.sequencewidget{
+  width: 100%;
+}
+
+.template-alchemy-controlpanel table.sequencewidget td:first-child {
+  width: 2em;
+}
