Refs #14797 - Fix CSS for auto-tagged items

--- a/eea/alchemy/browser/css/view.css
+++ b/eea/alchemy/browser/css/view.css
@@ -1,10 +1,13 @@
 .eea-alchemy-tag {
 }
 
-#content .eea-alchemy-tag a, #content .eea-alchemy-tag a:visited,
+#content .eea-alchemy-tag a,
+#content .eea-alchemy-tag a:visited,
+#content p .eea-alchemy-tag a,
 .eea-alchemy-tag a, .eea-alchemy-tag a:visited {
     border-bottom-style: dashed;
     border-bottom-width: 1px;
+    border-bottom-color: #346F83;
 }
 
 .template-alchemy-controlpanel .textType,
